stops autoplaying lottie animations for small devices folder view for better performance

--- a/src/app/components/desktop-icon/desktop-icon.component.sass
+++ b/src/app/components/desktop-icon/desktop-icon.component.sass
@@ -3,10 +3,11 @@
 	position: 			absolute
 	top: 						0
 	left: 					0
-	height: 				calc(100vh - 24px)
+	height: 				calc(100vh - 60px)
 	flex-wrap: 			wrap
 	display: 				inline-flex
 	flex-direction: column
+	user-select: 		none
 
 .desktop-icon
 	display: 				flex
