--- a/src/app/components/app-lottie/app-lottie.component.html
+++ b/src/app/components/app-lottie/app-lottie.component.html
@@ -1,1 +1,1 @@
-<ng-lottie [options]="options"></ng-lottie>
+<ng-lottie [options]="options" (animationCreated)="animationCreated($event)"></ng-lottie>
