--- a/src/app/components/doc-view/doc-view.component.sass
+++ b/src/app/components/doc-view/doc-view.component.sass
@@ -21,6 +21,12 @@
 ul
 	padding-left: 24px
 
+.school-grid
+	display: 							 grid
+	grid-template-columns: repeat(auto-fit, minmax(280px, 480px))
+	grid-column-gap: 			 16px
+	justify-content:			 center
+	
 .school-wrapper
 	padding: 16px
 
