--- a/src/app/components/pic-view/pic-view.component.sass
+++ b/src/app/components/pic-view/pic-view.component.sass
@@ -4,7 +4,7 @@ mat-icon
 	margin: 	 4px
 	z-index: 	 5
 	opacity: 	 .6
-	font-size: 80px
+	transform: scale(2)
 	&:hover 
 		cursor: pointer
 
@@ -16,7 +16,7 @@ mat-icon
 .left-arrow 
 	position: absolute
 	top: 			calc(50% - 40px)
-	left: 		-16px
+	left: 		16px
 
 .content 
 	display: 					flex
