--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,4 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css'
 /* You can add global styles to this file, and also import other style files */
 $accent-color: #C4C4C4
 $shadow:       9px 9px 4px 0 rgba(0, 0, 0, 0.3)
