--- a/src/app/components/taskbar/taskbar.component.html
+++ b/src/app/components/taskbar/taskbar.component.html
@@ -18,7 +18,7 @@
   <div
     *ngFor="let obj of startMenuItems"
     class="menu-item dont-close"
-    (click)="startMenuItemClicked(obj.name, obj.option)"
+    (click)="startMenuItemClicked(obj.name)"
   >
     <div
       class="menu-icon-name-wrapper dont-close"
