adds package version to start up animation

--- a/src/app/components/start-up/start-up.component.html
+++ b/src/app/components/start-up/start-up.component.html
@@ -11,6 +11,8 @@
   </div>
   <div class="copyWrapper">
     <p>Copyright © Puterware Corporation</p>
-    <h2>Puterware</h2>
+    <h2>
+      Puterware <span class="version">v{{ version }}</span>
+    </h2>
   </div>
 </div>
