starts updating looks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
     (maximize)="maximizeWindow($event)"
   >
   </app-taskbar>
+  <!-- <app-mac-taskbar></app-mac-taskbar> -->
 </div>
 
 <app-start-up> </app-start-up>
