swaps background for new space one

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -19,7 +19,7 @@ $btn-shadow: inset 2px 2px 2px white, inset -2px -2px 2px black
 	width:   						100vw
 	background-repeat: 	no-repeat
 	background-size: 		cover
-	background-image: 	url("../assets/imgs/background.svg")
+	// background-image: 	url("../assets/imgs/space2.png")
 
 app-taskbar
 	position: absolute
