--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,11 @@
     (maximize)="maximizeWindow($event)"
   >
   </app-taskbar>
+  <app-lottie
+    [ngStyle]="{ position: 'absolute', top: 0, bottom: 0, left: 0, right: 0 }"
+    [animation]="'meteor'"
+    draggable="false"
+  ></app-lottie>
   <!-- <app-mac-taskbar></app-mac-taskbar> -->
 </div>
 
