--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,14 @@
   >
   </app-taskbar>
   <app-lottie
-    [ngStyle]="{ position: 'absolute', top: 0, bottom: 0, left: 0, right: 0 }"
+    [ngStyle]="{
+      position: 'absolute',
+      top: 0,
+      bottom: 0,
+      left: 0,
+      right: 0,
+      pointerEvents: 'none'
+    }"
     [animation]="'meteor'"
     draggable="false"
   ></app-lottie>
