--- a/src/app/components/desktop-icon/desktop-icon.component.html
+++ b/src/app/components/desktop-icon/desktop-icon.component.html
@@ -1,8 +1,23 @@
 <div class="desktop-icon-wrapper">
   <div class="desktop-icon" *ngFor="let item of icons">
-    <mat-icon (click)="desktopIconClicked(item)">
-      {{ item.icon }}
-    </mat-icon>
+    <div *ngIf="item.animation; else show_icon">
+      <app-lottie
+        [animation]="item.animation"
+        [options]="this.boxOptions"
+        draggable="false"
+        #boxLottie
+        (mouseover)="hover(false, item.animation)"
+        (mouseleave)="hover(true, item.animation)"
+        (click)="desktopIconClicked(item)"
+      ></app-lottie>
+    </div>
+
+    <ng-template #show_icon>
+      <mat-icon (click)="desktopIconClicked(item)">
+        {{ item.icon }}
+      </mat-icon></ng-template
+    >
+
     <div class="title">{{ item.name | titlecase }}</div>
   </div>
 </div>
