--- a/src/app/components/app-lottie/app-lottie.component.html
+++ b/src/app/components/app-lottie/app-lottie.component.html
@@ -1,1 +1,8 @@
-<ng-lottie [options]="options" (animationCreated)="animationCreated($event)"></ng-lottie>
+<lottie-player
+  #lottieAnimation
+  [name]="animation"
+  [autoplay]="!options.paused"
+  [src]="options.path"
+  [loop]="!options.paused"
+>
+</lottie-player>
