--- a/src/app/components/desktop-icon/desktop-icon.component.sass
+++ b/src/app/components/desktop-icon/desktop-icon.component.sass
@@ -13,10 +13,11 @@
 	display: 				flex
 	flex-direction: column
 	align-items: 		center
+	justify-content: center
 	width: 					64px
 	margin: 				24px
 	height: 				100px
-	padding-left:		12px
+
 	div
 		text-align: 	center
 		user-select: 	none
@@ -36,9 +37,9 @@ mat-icon
 
 @media (min-width: 500px)
 	.desktop-icon
-		width: 				96px
-		margin: 			24px
-		height: 			130px
+		width: 				160px
+		margin: 			16px 2px
+		height: 			160px
 
 	mat-icon
 		font-size: 96px
