--- a/src/app/components/folder-items/folder-items.component.html
+++ b/src/app/components/folder-items/folder-items.component.html
@@ -1,13 +1,20 @@
+<div class="folder-icon-grid">
+  <div
+    *ngFor="let item of files"
+    class="folder-icon"
+    [ngStyle]="{ 'background-color': item.bg ? 'black' : 'white' }"
+    (click)="folderIconClicked(item)"
+  >
+    <div class="img-wrapper">
+      <img *ngIf="item.src" src="{{ item.src }}" draggable="false" />
 
-<div class="folder-icon-grid" >
-	<div *ngFor="let item of files" 
-			 class="folder-icon"
-			 [ngStyle]="{'background-color': item.bg ? 'black' : 'white'}"
-			 (click)="folderIconClicked(item)">
-		<div class="img-wrapper">
-			<img *ngIf="item.src" src="{{item.src}}" draggable="false">
-			<app-lottie *ngIf="!item.src" [animation]="item.name" [paused]="paused" draggable="false"></app-lottie>
-		</div>
-		<div class="name">{{item.name }}</div>
-	</div>
+      <app-lottie
+        *ngIf="!item.src"
+        [animation]="item.name"
+        [paused]="paused"
+        draggable="false"
+      ></app-lottie>
+    </div>
+    <div class="name">{{ item.name }}</div>
+  </div>
 </div>
