--- a/src/app/components/app-lottie/app-lottie.component.html
+++ b/src/app/components/app-lottie/app-lottie.component.html
@@ -3,6 +3,6 @@
   [name]="animation"
   [autoplay]="!options.paused"
   [src]="options.path"
-  [loop]="!options.paused"
+  [loop]="options.loop !== false"
 >
 </lottie-player>
