adds in firebase analytics and adds event to see what icon users are clicking

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,8 @@
         right: 0,
         pointerEvents: 'none'
       }"
+      [options]="bgLottieOptions"
       [animation]="'meteor'"
-      [options]="{ paused: false }"
-      draggable="false"
     ></app-lottie>
     <app-desktop-icon (iconClicked)="openDesktopFolder($event)">
     </app-desktop-icon>
