--- a/src/app/components/app-lottie/app-lottie.component.html
+++ b/src/app/components/app-lottie/app-lottie.component.html
@@ -4,5 +4,7 @@
   [autoplay]="!options.paused"
   [src]="options.path"
   [loop]="options.loop !== false"
+  (mouseover)="handleUnpaused()"
+  (mouseleave)="handlePaused()"
 >
 </lottie-player>
