--- a/src/app/components/folder-items/folder-items.component.html
+++ b/src/app/components/folder-items/folder-items.component.html
@@ -11,7 +11,7 @@
       <app-lottie
         *ngIf="!item.src"
         [animation]="item.name"
-        [paused]="paused"
+        [options]="{ paused: true }"
         draggable="false"
       ></app-lottie>
     </div>
