--- a/src/app/components/folder-items/folder-items.component.sass
+++ b/src/app/components/folder-items/folder-items.component.sass
@@ -14,7 +14,8 @@
 	display: 				 flex
 	justify-content: center
 	align-items: 		 center
-	height: 		 			192px
+	height: 		 		 192px
+	cursor:        	 pointer
 
 img
 	max-width:  192px
