adds toggle btn to toggle between oss

--- a/src/app/components/app-lottie/app-lottie.component.html
+++ b/src/app/components/app-lottie/app-lottie.component.html
@@ -6,5 +6,6 @@
   [loop]="options.loop !== false"
   (mouseover)="handleUnpaused()"
   (mouseleave)="handlePaused()"
+  [style]="options.style"
 >
 </lottie-player>
