--- a/src/app/components/desktop-icon/desktop-icon.component.html
+++ b/src/app/components/desktop-icon/desktop-icon.component.html
@@ -13,8 +13,8 @@
     <ng-template #show_icon>
       <mat-icon (click)="desktopIconClicked(item)">
         {{ item.icon }}
-      </mat-icon></ng-template
-    >
+      </mat-icon>
+    </ng-template>
 
     <div class="title">{{ item.name | titlecase }}</div>
   </div>
