--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,18 +5,22 @@
 >
   <div class="content">
     <app-lottie
-      [ngStyle]="{
-        position: 'absolute',
-        top: 0,
-        bottom: 0,
-        left: 0,
-        right: 0,
-        pointerEvents: 'none'
-      }"
+      *ngIf="os === 'windows'; else mac"
+      class="bgLottie"
       [options]="bgLottieOptions"
-      [animation]="'meteor'"
+      [animation]="'clouds'"
     ></app-lottie>
-    <app-desktop-icon (iconClicked)="openDesktopFolder($event)">
+    <ng-template #mac>
+      <app-lottie
+        class="bgLottie"
+        [options]=""
+        [animation]="'meteor'"
+      ></app-lottie>
+    </ng-template>
+    <app-desktop-icon
+      *ngIf="os === 'windows'"
+      (iconClicked)="openDesktopFolder($event)"
+    >
     </app-desktop-icon>
 
     <app-window
@@ -29,6 +33,7 @@
   </div>
 
   <app-taskbar
+    *ngIf="os === 'windows'"
     [animations]="animations"
     [icons]="icons"
     [openFiles]="openFiles"
@@ -38,9 +43,16 @@
   >
   </app-taskbar>
 
-  <!-- <app-mac-taskbar></app-mac-taskbar> -->
+  <app-os-toggle></app-os-toggle>
+
+  <app-mac-taskbar
+    *ngIf="os === 'mac'"
+    [openFiles]="openFiles"
+    (maximize)="maximizeWindow($event)"
+    (iconClicked)="openDesktopFolder($event)"
+  ></app-mac-taskbar>
 </div>
 
-<!-- <app-start-up> </app-start-up> -->
+<app-start-up *ngIf="os === 'windows'"> </app-start-up>
 
 <router-outlet></router-outlet>
