--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -17,9 +17,14 @@ $btn-shadow: inset 2px 2px 2px white, inset -2px -2px 2px black
 .content 
 	height: 						100vh
 	width:   						100vw
-	background-repeat: 	no-repeat
-	background-size: 		cover
-	// background-image: 	url("../assets/imgs/space2.png")
+
+.bgLottie
+	position: absolute
+	pointer-events: none
+	top: 0
+	bottom: 0
+	left: 0
+	right: 0
 
 app-taskbar
 	position: absolute
