--- a/src/app/components/mac-taskbar/mac-taskbar.component.sass
+++ b/src/app/components/mac-taskbar/mac-taskbar.component.sass
@@ -1,13 +1,64 @@
 @import "../../../styles.sass"
 
 .taskbar 
+  margin: 0 16px
+  border-radius: 8px
   position: absolute
   bottom: 0
   left: 0
   right: 0
-  display: 					flex
-  align-items:      center
-  height:   				42px
-  background-color: rgba(255,255,255,.5)
+  z-index:          5
+  display: flex
+  justify-content: center
+
+.blur   
+  margin: 0 16px
+  border-radius: 8px
+  backdrop-filter: blur(4px)
+  position: relative
+  display: flex
+  background-color: rgba(255,255,255,.4)
   z-index:          5
 
+
+.desktop-icon 
+  height: 72px
+  width: 72px
+  margin: 16px
+  align-items: center
+  display: flex
+  justify-content: center
+
+@keyframes bounce 
+  from,
+  20%,
+  53%,
+  to 
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
+    transform: translate3d(0, 0, 0)
+  
+
+  40%,
+  43% 
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
+    transform: translate3d(0, -30px, 0) scaleY(1.1)
+  
+
+  70% 
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
+    transform: translate3d(0, -15px, 0) scaleY(1.05)
+  
+
+  80% 
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
+    transform: translate3d(0, 0, 0) scaleY(0.95)
+  
+
+  90% 
+    transform: translate3d(0, -4px, 0) scaleY(1.02)
+  
+
+
+.bounce 
+  animation: 0.5s ease-out 0s  bounce  
+  transform-origin: center bottom
