--- a/src/app/components/pic-view/pic-view.component.sass
+++ b/src/app/components/pic-view/pic-view.component.sass
@@ -32,7 +32,8 @@ mat-icon
 img 
 	width: 					calc(100% - 96px)
 	max-width: 			800px
-	max-height: 		400px
+	height:					calc(100% - 40px)
+	max-height: 		600px
 	object-fit: 		contain
 	user-select: 		none
 	pointer-events: none
