fixes os animatiosn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
     <ng-template #mac>
       <app-lottie
         class="bgLottie"
+        [ngStyle]="{ bottom: 0 }"
         [options]=""
         [animation]="'meteor'"
       ></app-lottie>
