--- a/src/app/components/folder-items/folder-items.component.sass
+++ b/src/app/components/folder-items/folder-items.component.sass
@@ -4,7 +4,10 @@
 	grid-column-gap: 			 64px
 	grid-row-gap:          64px
 	padding: 							 24px 24px 96px
-	justify-content: 			center
+	justify-content: 				center
+	border-radius: 					8px
+
+
 
 .folder-icon
 	width:  192px
