--- a/src/app/components/mac-taskbar/mac-taskbar.component.sass
+++ b/src/app/components/mac-taskbar/mac-taskbar.component.sass
@@ -20,14 +20,36 @@
   background-color: rgba(255,255,255,.4)
   z-index:          5
 
+.selected
+  background-color: rgba(255,255,255, .25)
 
-.desktop-icon 
-  height: 72px
-  width: 72px
-  margin: 16px
+
+.desktop-icon
+  transition: all .5s cubic-bezier(0.35, 0, 0.25, 1) .25s
+  width: 48px
   align-items: center
   display: flex
   justify-content: center
+  margin: 8px
+  padding: 8px
+  border-radius: 8px
+
+
+.animate 
+  max-height: 96px
+  width: 100%  
+  cursor: pointer
+
+.folder 
+  height: 96px
+@media (min-width: 500px)
+  .desktop-icon
+    width: 				72px
+
+
+.bounce 
+  animation: 0.5s ease-out 0s  bounce  
+  transform-origin: center bottom
 
 @keyframes bounce 
   from,
@@ -36,19 +58,13 @@
   to 
     animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
     transform: translate3d(0, 0, 0)
-  
-
   40%,
   43% 
     animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
     transform: translate3d(0, -30px, 0) scaleY(1.1)
-  
-
   70% 
     animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
     transform: translate3d(0, -15px, 0) scaleY(1.05)
-  
-
   80% 
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
     transform: translate3d(0, 0, 0) scaleY(0.95)
@@ -59,6 +75,14 @@
   
 
 
-.bounce 
-  animation: 0.5s ease-out 0s  bounce  
-  transform-origin: center bottom
+.color 
+  animation:.5s ease-out .2s  color 
+  animation-fill-mode: forwards
+
+
+@keyframes color 
+  0%
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
+    background-color: none
+  100% 
+     background-color: green
