--- a/src/app/components/window/window.component.sass
+++ b/src/app/components/window/window.component.sass
@@ -2,14 +2,17 @@
 
 .resizable-draggable 
   transition:         width  .25s, height .25s
-  min-width:          250px
+  min-width:          400px
   min-height:         250px
   position:           absolute
-  background-color:   white
   box-shadow:         8px 8px 6px 1px rgba(0, 0, 0, 0.3), 0px 0px 0px .5px rgba(0, 0, 0, 1)
+
+.blur
+  backdrop-filter: 				blur(16px)
+  background-color: rgba(34,34,34,.8)
   
 .drag 
-  width: calc(100% - 110px)
+  max-width: calc(100% - 110px)
 
 .resize-action 
   position:     absolute
@@ -18,7 +21,7 @@
   transform:    translate3d(-50%, -50%, 0) rotateZ(45deg)
   border-style: solid
   border-width: 8px
-  border-color: transparent transparent transparent darkslategrey
+  border-color: transparent transparent transparent grey
  
   &:hover, &:active 
     cursor: nwse-resize
@@ -35,6 +38,12 @@
   &:hover 
     cursor: all-scroll
 
+.macToolbar 
+  background-color: #222222
+  color: white
+  justify-content:  center
+  box-shadow:     0px 2px 2px 1px rgba(0, 0, 0, 0.3)
+
 .title
   padding-left:   8px
   width:          100%
@@ -43,20 +52,43 @@
   text-overflow:  ellipsis
 
 mat-icon 
-  border:           1px solid black
   margin:           4px
-  background-color: $accent-color
-  box-shadow:       $btn-shadow
-  z-index:          5
 
-  &:hover 
-    cursor: pointer
+.macIcons 
+  position: absolute
+  left: 0
+  top: 0
+
+.windowsIcons
+  mat-icon 
+    border:           1px solid black
+    margin:           4px
+    background-color: $accent-color
+    box-shadow:       $btn-shadow
+    z-index:          5
+
+
+mat-icon:hover 
+  cursor: pointer
 
 .content
   width:      100%
   height:     calc(100% - 32px)
   margin-top: 1px
- 
+  
+.macScroll::-webkit-scrollbar            
+  width: 1em
+
+.macScroll::-webkit-scrollbar-corner            
+  background: #222222
+
+.macScroll::-webkit-scrollbar-thumb 
+  background-color: #7f7e7c
+
+.macScroll::-webkit-scrollbar-track 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+
+  
 .viewer
   display:          flex
   justify-content:  center
