--- a/src/app/components/taskbar/taskbar.component.sass
+++ b/src/app/components/taskbar/taskbar.component.sass
@@ -5,7 +5,7 @@
   align-items:      center
   height:   				42px
   background-color: $accent-color
-  z-index:          5
+  z-index:          1000
   box-shadow: inset white 0px 2px 1px
 
 .start-btn
@@ -35,6 +35,10 @@
  &:hover 
   cursor: pointer
   background-color: $accent-color
+
+.opened 
+  background: #d3d3d3
+  boxShadow: inset 2px 2px 2px black, inset -2px -2px 2px white
 
 .date 
  position:  			absolute
