--- a/src/app/components/taskbar/taskbar.component.html
+++ b/src/app/components/taskbar/taskbar.component.html
@@ -33,10 +33,11 @@
 
 <div class="taskbar">
   <div class="start-btn dont-close" (click)="startClicked()">Start</div>
-  <div *ngFor="let item of openFiles">
+  <div *ngFor="let item of openFiles; let i = index">
     <div
       *ngIf="item.name"
-      [ngStyle]="styleTab(item)"
+      [style.width.px]="openWidth"
+      [ngClass]="i === openFiles.length - 1 ? 'opened' : ''"
       class="tab"
       (click)="tabClicked(item)"
     >
