--- a/src/app/components/taskbar/taskbar.component.sass
+++ b/src/app/components/taskbar/taskbar.component.sass
@@ -38,7 +38,7 @@
 
 .opened 
   background: #d3d3d3
-  boxShadow: inset 2px 2px 2px black, inset -2px -2px 2px white
+  box-shadow: inset 2px 2px 2px black, inset -2px -2px 2px white
 
 .date 
  position:  			absolute
