--- a/src/app/components/folder-items/folder-items.component.html
+++ b/src/app/components/folder-items/folder-items.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="name" [style.color]="os === 'mac' ? 'white' : 'black'">
       {{ item.name }}
-      <div *ngIf="item.src" [style.fontSize]="'14px'">({{ item.size }})</div>
+      <div [style.fontSize]="'14px'">({{ item.size }})</div>
     </div>
   </div>
 </div>
