--- a/src/app/components/pic-view/pic-view.component.sass
+++ b/src/app/components/pic-view/pic-view.component.sass
@@ -11,7 +11,7 @@ mat-icon
 .right-arrow 
 	position: absolute
 	top: 			calc(50% - 40px)
-	right: 		38px
+	right: 		16px
 
 .left-arrow 
 	position: absolute
@@ -28,6 +28,9 @@ mat-icon
 	width: 						100%
 	max-width: 				1000px
 	position: 				relative
+
+.maximized 
+	height:						calc(100% - 240px)
 
 img 
 	width: 					calc(100% - 96px)
